<resources>
    <string name="app_name">My Application</string>
    <string name="Username">Username</string>
    <string name="genero">Genero</string>
    <string name="n_telemovel">Nº Telemovel</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="add_cion">add_icon</string>
    <string name="este_e_onde_vai_estar_a_pergunta">Este e onde vai estar a pergunta</string>
</resources>