<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imagemFundo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:backgroundTint="#8A575757"
        android:backgroundTintMode="add"
        android:elevation="@dimen/cardview_default_elevation"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="173dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    style="@android:style/Widget.Material.HorizontalScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="-40dp"
                    android:contentDescription="@string/app_name"
                    android:elevation="10dp"
                    android:isScrollContainer="false"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    android:scrollbarThumbHorizontal="@color/cardview_shadow_start_color"
                    android:scrollbars="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="1"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar1" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="2"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar2" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="3"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar3" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="4"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar4" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="5"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar5" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="6"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar6" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="7"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar7" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="8"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar8" />

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="9"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar9" />

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="10"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar10" />

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="11"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar11" />

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="12"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar12" />

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="13"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar13" />

                        <ImageView
                            android:id="@+id/imageView14"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="14"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar14" />

                        <ImageView
                            android:id="@+id/imageView15"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="15"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar15" />

                        <ImageView
                            android:id="@+id/imageView16"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="16"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar16" />

                        <ImageView
                            android:id="@+id/imageView17"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="17"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar17" />

                        <ImageView
                            android:id="@+id/imageView18"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:contentDescription="18"
                            android:contextClickable="false"
                            android:onClick="imageClicks"
                            android:padding="2pt"
                            app:srcCompat="@drawable/avatar18" />
                    </LinearLayout>

                </HorizontalScrollView>

                <EditText
                    android:id="@+id/Username"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:backgroundTint="#3949AB"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textColor="#1E88E5"
                    android:textColorHint="#699AC5"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#3949AB"
                    android:drawingCacheQuality="high"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#1E88E5"
                    android:textColorHint="#699AC5"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#3949AB"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#1E88E5"
                    android:textColorHint="#699AC5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Password"
                    tools:ignore="TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/Denero"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:animateLayoutChanges="false"
                    android:animationCache="false"
                    android:dropDownWidth="wrap_content"
                    android:textColor="#1E88E5"
                    android:textColorHint="#699AC5"
                    android:touchscreenBlocksFocus="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nTelemovel" />

                <EditText
                    android:id="@+id/dataNasc"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#3949AB"
                    android:ems="10"
                    android:hint="Data Nascimento"
                    android:textColor="#1E88E5"
                    android:textColorHint="#699AC5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="469dp" />

                <EditText
                    android:id="@+id/nTelemovel"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#3949AB"
                    android:ems="10"
                    android:hint="@string/n_telemovel"
                    android:inputType="phone"
                    android:textColor="#1E88E5"
                    android:textColorHint="#699AC5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.552"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dataNasc"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="271dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#3949AB"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="271dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#1E88E5"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/add_cion"
            android:elevation="10dp"
            android:onClick="addIconClicks"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_user" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>